Updated Index.html content

--- a/Quizzard/index.html
+++ b/Quizzard/index.html
@@ -9,17 +9,18 @@
 <body>
 
 <h1>Quizzard App</h1>
-<p>So far, data is fetched and stored in a text variable.</p>
+<p>Questions Commonly Asked in Interviews</p>
 <h2>To-Dos</h2>
 <ol>
 	<li>Make answer hidden unless clicked</li>
-	<li>Design rest of page</li>
-	<li>CSS page</li>
+	<li>CSS overhaul</li>
+	<li>Java, etc tabs</li>
+	<li>Landing page</li>
 	<li></li>
 </ol>
 <div id="q_control" type="button"
 onclick="repl_with()">
-<p id="question">Click me to display Date and Time.</p></div>
+<p id="question">Click me to display a question.</p></div>
 <p id="answer"></p>
 
 </body>
