Answer hidden until clicked

--- a/Quizzard/index.html
+++ b/Quizzard/index.html
@@ -12,16 +12,22 @@
 <p>Questions Commonly Asked in Interviews</p>
 <h2>To-Dos</h2>
 <ol>
-	<li>Make answer hidden unless clicked</li>
+	<del><li>Make answer hidden unless clicked</li></del>
 	<li>CSS overhaul</li>
 	<li>Java, etc tabs</li>
 	<li>Landing page</li>
+	<li>settings "on click": random, next, previous</li>
+	<li></li>
+	<li></li>
 	<li></li>
 </ol>
 <div id="q_control" type="button"
-onclick="repl_with()">
+onclick="repl_q()">
 <p id="question">Click me to display a question.</p></div>
+<div id="a_control" type="button"
+onclick="repl_a()">
 <p id="answer"></p>
+</div>
 
 </body>
 </html> 
