minor CSS changes

--- a/Quizzard/index.html
+++ b/Quizzard/index.html
@@ -30,6 +30,8 @@
   <del><li>Make answer hidden unless clicked</li></del>
   <li>CSS overhaul</li>
   <li>Java, etc tabs</li>
+  <li>Mae q/a cards inline</li>
+  <li>Make Quizzard app text visible on SQL page</li>
   <li>Landing page</li>
   <li>Settings "on click": random, next, previous</li>
   <li>Optional card memory: </li>
