--- a/Quizzard/sql.html
+++ b/Quizzard/sql.html
@@ -6,7 +6,7 @@
   <style>
     body {
       background-image: url('images/server.jpg');
-      background-repeat: no-repeat;
+      background-repeat: repeat;
     }
   </style>
   <script type="text/javascript" src="script.js">
