--- a/Quizzard/index.html
+++ b/Quizzard/index.html
@@ -25,29 +25,8 @@
 
 <h1>Quizzard App</h1>
 
-<h2>To-Dos</h2>
-<ol>
-  <del><li>Make answer hidden unless clicked</li></del>
-  <li>CSS overhaul</li>
-  <li>Java, etc tabs</li>
-  <li>Mae q/a cards inline</li>
-  <li>Make Quizzard app text visible on SQL page</li>
-  <li>Landing page</li>
-  <li>Settings "on click": random, next, previous</li>
-  <li>Optional card memory: </li>
-    <ul>
-      <li>Won't get same card for at least n iter</li>
-      <li>n can be set to 1,2,3, etc</li>
-      <li>Or implement 1 minus exponential dist</li>
-      <li>Has a memory of 6 elements</li>
-      <li>Cumulative probability of any elem in memory list</li>
-      <li>Modify random getter</li>
-      <li>Pre-set exponential-dist prob. in array: [0, 0.2, 0.5, ...]</li>
-      <li>First 6 iter = no duplicates fct, then list is full and does exp</li>
-      <li>Have to check that m=6 is appropriate compared to window.elems</li>
-    </ul>
-  <li></li>
-</ol>
+<h2>Welcome to the Quizzard app!</h2>
+
 
 </body>
 </html> 
