--- a/Quizzard/sql.html
+++ b/Quizzard/sql.html
@@ -23,17 +23,17 @@
 </ul>
 </header>
 
-<h1>Quizzard App</h1>
-<p>Questions Commonly Asked in Interviews</p>
-
-
+<span>
 <div id="q_control" type="button" onclick="repl_q()">
 <p id="question">Click me to display a question.</p>
 </div>
+</span>
 
+<span>
 <div id="a_control" type="button" onclick="repl_a()">
 <p id="answer"></p>
 </div>
+</span>
 
 </body>
 </html> 
