Added all SQL questions

--- a/Quizzard/todos.html
+++ b/Quizzard/todos.html
@@ -8,6 +8,10 @@
       background-image: url('images/webdev.jpg');
       background-repeat: no-repeat;
     }
+    ol li {
+      text-shadow: 1px 1px 2px ivory, -1px -1px 2px ivory, -1px 1px 2px ivory, 1px -1px 2px ivory;
+      color:blue;
+    }
   </style>
   <script type="text/javascript" src="script.js">
   </script>
@@ -27,14 +31,8 @@
 
 <h2>To-Dos</h2>
 <ol>
-  <del><li>Make answer hidden unless clicked</li></del>
-  <li>CSS overhaul</li>
-  <li>Java, etc tabs</li>
-  <li>Mae q/a cards inline</li>
-  <li>Make Quizzard app text visible on SQL page</li>
-  <li>Landing page</li>
-  <li>Settings "on click": random, next, previous</li>
-  <li>Optional card memory: </li>
+  <li>Complete SQL card DB</li>
+  <li>Card memory: </li>
     <ul>
       <li>Won't get same card for at least n iter</li>
       <li>n can be set to 1,2,3, etc</li>
@@ -46,6 +44,9 @@
       <li>First 6 iter = no duplicates fct, then list is full and does exp</li>
       <li>Have to check that m=6 is appropriate compared to window.elems</li>
     </ul>
+  <li>CSS overhaul</li>
+  <li>Landing page</li>
+  <li>Settings "on click": random, next, previous</li>
   <li></li>
 </ol>
 
