Made sql page CSS ref relative

--- a/Quizzard/sql.html
+++ b/Quizzard/sql.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Quizzard App</title>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/220509-web-dev/FoundationProject-Josiah/main/Quizzard/style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       background-image: url('images/server.jpg');
