db.html small formatting fix

--- a/Quizzard/db.html
+++ b/Quizzard/db.html
@@ -234,7 +234,7 @@
 ;;;;;;;;
 <h3>How can you sort the entries in your result set by a particular column?</h3>
 ;;;;
-<p>By using the keyword pair order by at the end of a <span id="keyword">select</span> statement, we can sort ascending (<span id="keyword">asc</span>) or descending (<span id="keyword">desc</span>) by any fields, combination of fields, or function results of fields from the original table being queried.  </p>
+<p>By using the keyword pair <span id="keyword">order by</span> at the end of a <span id="keyword">select</span> statement, we can sort ascending (<span id="keyword">asc</span>) or descending (<span id="keyword">desc</span>) by any fields, combination of fields, or function results of fields from the original table being queried.  </p>
 <p>For example, one might perform the query </p>
 <p><span id="keyword">select</span> full_name <span id="keyword">from</span> students <span id="keyword">order by</span> <span id="keyword">cast</span>(date_of_birth <span id="keyword">as</span> datetime); </p>
 
