--- a/Quizzard/java.html
+++ b/Quizzard/java.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Quizzard App</title>
+  <title>Java Cards</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="stylec.css">
-  <script type="text/javascript" src="script.js">
+  <script type="text/javascript" src="script-java.js">
   </script>
 </head>	
 <body>
@@ -18,7 +18,17 @@
 </ul>
 </header>
 
-<h1>Coming Soon</h1>
+<span>
+<div id="q_control" type="button" onclick="repl_q()">
+<p id="question">Click me to display a question.</p>
+</div>
+</span>
+
+<span>
+<div id="a_control" type="button" onclick="repl_a()">
+<p id="answer"></p>
+</div>
+</span>
 
 </body>
 </html> 
