Updated Java background to Java

--- a/Quizzard/java.html
+++ b/Quizzard/java.html
@@ -3,7 +3,7 @@
 <head>
   <title>Java Cards</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="stylec.css">
+  <link rel="stylesheet" href="stylej.css">
   <script type="text/javascript" src="script-java.js">
   </script>
 </head>	
