Added more Java questions. Halfway done

--- a/Quizzard/db-java.html
+++ b/Quizzard/db-java.html
@@ -199,7 +199,12 @@ methods of objects that are instances of that class.</p>
 ;;;;;;;;
 <h3>List the access modifiers from most visible to least visible</h3>
 ;;;;
-<p></p>
+<ol>
+<li>Public</li>
+<li>Protected</li>
+<li>Default</li>
+<li>Private</li>
+</ol>
 
 ;;;;;;;;
 <h3>What is the difference in visibility between protected and package-private access level?</h3>
@@ -224,7 +229,7 @@ methods of objects that are instances of that class.</p>
 ;;;;;;;;
 <h3>Can garbage collected be forced in Java?</h3>
 ;;;;
-<p></p>
+<p>No, it cannot be forced. System.gc(); merely suggests to the JVM to collect garbage.</p>
 
 ;;;;;;;;
 <h3>What are packages used for?</h3>
