Added all but 2 Java questions

--- a/Quizzard/db-java.html
+++ b/Quizzard/db-java.html
@@ -317,7 +317,7 @@ methods of objects that are instances of that class.</p>
 ;;;;;;;;
 <h3>What are short-circuit boolean operators?</h3>
 ;;;;
-<p>In a statement like (c1 || c2), c2 is not evaluated if c1 is true. In (c1 && c2), c2 will not evaluate if c1 is false.</p>
+<p>In a statement like (c1&nbsp;||&nbsp;c2), c2 is not evaluated if c1 is true. In (c1&nbsp;&&&nbsp;c2), c2 will not evaluate if c1 is false.</p>
 
 ;;;;;;;;
 <h3>What is the String Pool?</h3>
