added all questions

--- a/Quizzard/db-java.html
+++ b/Quizzard/db-java.html
@@ -392,7 +392,7 @@ methods of objects that are instances of that class.</p>
 ;;;;;;;;
 <h3>Are you required to handle RuntimeExceptions?</h3>
 ;;;;
-<p></p>
+<p>No</p>
 
 ;;;;;;;;
 <h3>Can exceptions be caught by multiple catch blocks in any order?</h3>
@@ -430,7 +430,9 @@ methods of objects that are instances of that class.</p>
 ;;;;;;;;
 <h3>What are default interface methods?</h3>
 ;;;;
-<p></p>
+<p>Methods can be implemented in Interfaces using the syntax</p>
+<p><span id="keyword">default</span> method_name(Object[] any_signature) { //any code }</p>
+<p>Methods that implement the interface are not required to override this method.</p>
 
 ;;;;;;;;
 <h3>What is the difference between an array and a linked list?</h3>
