Cleaned Project dir and set up programmatic servlet registration

--- a/ExamplesApp/src/main/webapp/login.html
+++ b/ExamplesApp/src/main/webapp/login.html
@@ -4,9 +4,8 @@
 </head>
 <body>     
     <br/><br/>
-<!-- form action points to the endpoint /login -->
-<!-- method="post" makes the servlet use the doPost method-->
-    <form action="login" method="post">
+     
+    <form action="LoginHandler" method="post">
         Username: <input type="text" size="14" name="username"/>
         <br/>
         Password: <input type="text" size="14" name="password"/>
