--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -1,28 +1,60 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Quick Servlet Demo</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Login App</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/floating-labels/">
+
+    <!-- Bootstrap CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+
+    <!-- Custom styles for this template -->
+    <link href="floating-labels.css" rel="stylesheet">
 </head>
+
 <body>
-<h1>Welcome to The App!</h1>
-    <br/><br/>
-<!-- form action points to the endpoint /login -->
-<!-- method="post" makes the servlet use the doPost method-->
+<div class="form-signin" >
+    <div class="text-center mb-4">
+        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Get User(s) Endpoint</h1>
+        <p>Find user by ID or Username, or get all the users by using these form inputs.</p>
+    </div>
+
     <form action="userauth" method="get">
-        ID: <input type="text" size="14" name="id"/>
-        &nbsp;
-        <input type="submit" value="Find User" />
+        <div class="form-label-group">
+            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:68%; float:left">
+            <label for="inputEmail">username@revature.net</label>
+        </div>
+
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%"/>
     </form>
-    <br/><br/>
-    <form action="userauth" method="get">
-        Username: <input type="text" size="14" name="username"/>
-        &nbsp;
-        <input type="submit" value="Find User" />
+
+    <form action="userauth" method="get"  >
+        <div class="form-label-group">
+            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:68%; float:left">
+            <label for="inputPassword">user ID</label>
+        </div>
+
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%"/>
     </form>
-    <br/><br/>
     <form action="userauth" method="get">
-        Get all users:
         &nbsp;&nbsp;
-        <input type="submit" value="Get All Users">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block;">
     </form>
+
+
+    <p class="mt-5 mb-3 text-muted text-center">© 2022</p>
+</div>
+
+
 </body>
 </html>
