--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -18,41 +18,40 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="floating-labels.css" rel="stylesheet">
+    <link href="resources/floating-labels.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color:rgb(228,216,195);">
 <div class="form-signin" >
     <div class="text-center mb-4">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Get User(s) Endpoint</h1>
-        <p>Find user by ID or Username, or get all the users by using these form inputs.</p>
+        <img class="mb-4" src="images/Endpoint.png" alt="" width="288" height="288" >
+        <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 0px;"></h1>
     </div>
 
-    <form action="userauth" method="get">
+    <form action="userauth" method="get" style="margin-top: -80px;">
         <div class="form-label-group">
-            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:68%; float:left">
+            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
             <label for="inputEmail">username@revature.net</label>
         </div>
 
-    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%"/>
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
 
     <form action="userauth" method="get"  >
         <div class="form-label-group">
-            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:68%; float:left">
-            <label for="inputPassword">user ID</label>
+            <input type="id" id="inputPassword" class="form-control" name="id" placeholder="User ID" required="" autofocus="" style="max-width:67%; float:left; background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
+            <label for="inputPassword">User ID</label>
         </div>
 
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%"/>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
-    <form action="userauth" method="get">
+    <form action="userauth" method="get" >
         &nbsp;&nbsp;
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block;">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Get All Users" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
     </form>
 
 
-    <p class="mt-5 mb-3 text-muted text-center">© 2022</p>
+    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">© 2022</p>
 </div>
 
 
