moved login page to different servlet

--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -32,7 +32,7 @@
         <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 0px;"></h1>
     </div>
 
-    <form action="login" method="get" style="margin-top: -80px;">
+    <form action="loginuser" method="get" style="margin-top: -80px;">
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
             <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
             <label for="inputEmail" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
