--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -54,7 +54,7 @@
     </form>
 
 
-    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">© 2022</p>
+    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
 </div>
 
 
