--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -47,7 +47,7 @@
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
     </form>
 
-    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">© 2022</p>
+    <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
 </div>
 
 
