CSS Phone compatibility

--- a/LoginApp/src/main/webapp/index.html
+++ b/LoginApp/src/main/webapp/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=600px, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login App</title>
+    <title>EndPoint</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/floating-labels/">
 
@@ -37,7 +37,7 @@
             <label for="inputEmail">username@revature.net</label>
         </div>
 
-    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Find User" style="margin-left:2%; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;"/>
     </form>
 
     <form action="userauth" method="get"  >
