--- a/LoginApp/src/main/webapp/login.html
+++ b/LoginApp/src/main/webapp/login.html
@@ -19,6 +19,8 @@
 
     <!-- Custom styles for this template -->
     <link href="resources/floating-labels.css" rel="stylesheet">
+
+    <script defer id="app-js" src="resources/dom-demos.js"></script>
 </head>
 
 <body style="background-color:rgb(228,216,195);">
@@ -34,17 +36,17 @@
 
     <form action="loginuser" method="get" style="margin-top: -80px;">
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="email" id="inputEmail" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
-            <label for="inputEmail" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
+            <input type="email" id="login-username" class="form-control" name="username" placeholder="Email username" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;"/>
+            <label for="login-username" style="color:rgb(128,82,62);font-weight:500;">username@revature.net</label>
         </div>
         <div class="form-label-group" style="margin-left:10%; margin-right:10%">
-            <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
-            <label for="inputPassword" style="color:rgb(128,82,62); font-weight:500;">Password</label>
+            <input type="password" id="login-password" class="form-control" name="password" placeholder="Password" required="" autofocus="" style="background-color:rgb(210,176,154);color:rgb(128,82,62);font-weight:800;">
+            <label for="login-password" style="color:rgb(128,82,62); font-weight:500;">Password</label>
         </div>
+        <p class="alert alert-danger" id="error-message" hidden></p>
 
 
-
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
+        <input class="btn btn-lg btn-primary btn-block" id="login-button" value="Login" style="margin-left: auto;margin-right: auto;display: block; height:49px; background-color:rgb(128,82,62);border-color:rgb(128,82,62); color:rgb(212,133,100); font-weight:500;">
     </form>
 
     <p class="mt-5 mb-3 text-muted text-center" style="color:rgb(128,82,62) !important;">&copy; 2022</p>
